# curtains

./: .gitignore  BROWSER_APP.md  NOTES.md  README.md  REVERSE ENGINEERING.txt  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/: dependabot.yml
.github/workflows/: page.yaml
src/curtains/: __init__.py  __main__.py  args.py  ble.py  commands.py  logger.py  messages.py  packet.py
src/html/: animations.html  breakout.html  draw.html  index.html  meteors.html  pong.html  tetris.html
src/js/: animations-entry.js  animations.js  ble.js  breakout-entry.js  breakout.js  controls.js  draw-entry.js  draw.js  index.js  meteors-entry.js  meteors.js  pong-entry.js  pong.js  tetris-entry.js  tetris.js
src/scenes/snowfall/: __main__.py  ble.py  grid.py
