[project]
name = "curtains"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt Copperwaite", email = "matthew.copperwaite@ft.com" }
]
dependencies = [
    "bleak>=0.22.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/curtains"]

[tool.rye.scripts]
curtains = "python3 -m curtains"
