[project]
name = "curtains"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt Copperwaite", email = "matthew.copperwaite@ft.com" }
]
dependencies = [
    "bleak>=0.22.3",
    "pillow>=12.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
curtains = "curtains.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/curtains"]
